--- a/blog-week17/views/template/back_navbar.ejs
+++ b/blog-week17/views/template/back_navbar.ejs
@@ -12,6 +12,7 @@
       <div>
       <% if (!username) { %>
           <li><a href="/login">登入</a></li>
+          <li><a href="/register">註冊</a></li>
         <% } else { %>
           <h2>Hi, <%= username %></h2>
           <li><a href="/admin">管理後台</a></li>
