--- a/blog-week17/views/register.ejs
+++ b/blog-week17/views/register.ejs
@@ -18,10 +18,14 @@
         <%= errorMessage %>
       </div>
     <% } %>  
-    <form action="/login" method="POST">
+    <form action="/register" method="POST">
       <div class="form-group">
         <label for="exampleInputEmail1">Uername</label>
         <input type="text" class="form-control" id="exampleInputEmail1" name="username">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Nickname</label>
+        <input type="text" class="form-control" id="exampleInputEmail1" name="nickname">
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
